PLGMAGV2-497: Fix Credit Card Payment Component CVV icon, which lightly breaks the layout of the form (#179)

--- a/view/frontend/web/css/styles.less
+++ b/view/frontend/web/css/styles.less
@@ -30,3 +30,8 @@
     background-repeat: no-repeat;
     background-size: contain;
 }
+
+[id^="multisafepay-credit-card-component-"] .msp-container-ui .msp-ui-tooltip-image {
+    width: 22px !important;
+    height: auto;
+}
